src/audio/codec/flac/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of drflac_metadata__bindgen_ty_1__bindgen_ty_6"]
        [::core::mem::size_of::<drflac_metadata__bindgen_ty_1__bindgen_ty_6>() - 56usize];
    ["Alignment of drflac_metadata__bindgen_ty_1__bindgen_ty_6"]
        [::core::mem::align_of::<drflac_metadata__bindgen_ty_1__bindgen_ty_6>() - 8usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1__bindgen_ty_6::type_"]
        [::core::mem::offset_of!(drflac_metadata__bindgen_ty_1__bindgen_ty_6, type_) - 0usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1__bindgen_ty_6::mimeLength"]
        [::core::mem::offset_of!(drflac_metadata__bindgen_ty_1__bindgen_ty_6, mimeLength) - 4usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1__bindgen_ty_6::mime"]
        [::core::mem::offset_of!(drflac_metadata__bindgen_ty_1__bindgen_ty_6, mime) - 8usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1__bindgen_ty_6::descriptionLength"][::core::mem::offset_of!(
        drflac_metadata__bindgen_ty_1__bindgen_ty_6,
        descriptionLength
    )
        - 12usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1__bindgen_ty_6::description"][::core::mem::offset_of!(
        drflac_metadata__bindgen_ty_1__bindgen_ty_6,
        description
    ) - 16usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1__bindgen_ty_6::width"]
        [::core::mem::offset_of!(drflac_metadata__bindgen_ty_1__bindgen_ty_6, width) - 20usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1__bindgen_ty_6::height"]
        [::core::mem::offset_of!(drflac_metadata__bindgen_ty_1__bindgen_ty_6, height) - 24usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1__bindgen_ty_6::colorDepth"][::core::mem::offset_of!(
        drflac_metadata__bindgen_ty_1__bindgen_ty_6,
        colorDepth
    ) - 28usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1__bindgen_ty_6::indexColorCount"][::core::mem::offset_of!(
        drflac_metadata__bindgen_ty_1__bindgen_ty_6,
        indexColorCount
    ) - 32usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1__bindgen_ty_6::pictureDataSize"][::core::mem::offset_of!(
        drflac_metadata__bindgen_ty_1__bindgen_ty_6,
        pictureDataSize
    ) - 36usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1__bindgen_ty_6::pictureDataOffset"][::core::mem::offset_of!(
        drflac_metadata__bindgen_ty_1__bindgen_ty_6,
        pictureDataOffset
    )
        - 40usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1__bindgen_ty_6::pPictureData"][::core::mem::offset_of!(
        drflac_metadata__bindgen_ty_1__bindgen_ty_6,
        pPictureData
    ) - 48usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of drflac_metadata__bindgen_ty_1"]
        [::core::mem::size_of::<drflac_metadata__bindgen_ty_1>() - 152usize];
    ["Alignment of drflac_metadata__bindgen_ty_1"]
        [::core::mem::align_of::<drflac_metadata__bindgen_ty_1>() - 8usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1::streaminfo"]
        [::core::mem::offset_of!(drflac_metadata__bindgen_ty_1, streaminfo) - 0usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1::padding"]
        [::core::mem::offset_of!(drflac_metadata__bindgen_ty_1, padding) - 0usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1::application"]
        [::core::mem::offset_of!(drflac_metadata__bindgen_ty_1, application) - 0usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1::seektable"]
        [::core::mem::offset_of!(drflac_metadata__bindgen_ty_1, seektable) - 0usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1::vorbis_comment"]
        [::core::mem::offset_of!(drflac_metadata__bindgen_ty_1, vorbis_comment) - 0usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1::cuesheet"]
        [::core::mem::offset_of!(drflac_metadata__bindgen_ty_1, cuesheet) - 0usize];
    ["Offset of field: drflac_metadata__bindgen_ty_1::picture"]
        [::core::mem::offset_of!(drflac_metadata__bindgen_ty_1, picture) - 0usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of drflac_metadata"][::core::mem::size_of::<drflac_metadata>() - 176usize];
    ["Alignment of drflac_metadata"][::core::mem::align_of::<drflac_metadata>() - 8usize];
    ["Offset of field: drflac_metadata::type_"]
        [::core::mem::offset_of!(drflac_metadata, type_) - 0usize];
    ["Offset of field: drflac_metadata::rawDataSize"]
        [::core::mem::offset_of!(drflac_metadata, rawDataSize) - 4usize];
    ["Offset of field: drflac_metadata::rawDataOffset"]
        [::core::mem::offset_of!(drflac_metadata, rawDataOffset) - 8usize];
    ["Offset of field: drflac_metadata::pRawData"]
        [::core::mem::offset_of!(drflac_metadata, pRawData) - 16usize];
    ["Offset of field: drflac_metadata::data"]
        [::core::mem::offset_of!(drflac_metadata, data) - 24usize];
};
pub type drflac_read_proc = ::core::option::Option<
    unsafe extern "C" fn(
        pUserData: *mut cty::c_void,
        pBufferOut: *mut cty::c_void,
        bytesToRead: usize,
    ) -> usize,
>;
pub type drflac_seek_proc = ::core::option::Option<
    unsafe extern "C" fn(
        pUserData: *mut cty::c_void,
        offset: cty::c_int,
        origin: drflac_seek_origin,
    ) -> drflac_bool32,
>;
pub type drflac_tell_proc = ::core::option::Option<
    unsafe extern "C" fn(pUserData: *mut cty::c_void, pCursor: *mut drflac_int64) -> drflac_bool32,
>;
pub type drflac_meta_proc = ::core::option::Option<
    unsafe extern "C" fn(pUserData: *mut cty::c_void, pMetadata: *mut drflac_metadata),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct drflac__memory_stream {
    pub data: *const drflac_uint8,
    pub dataSize: usize,
    pub currentReadPos: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of drflac__memory_stream"][::core::mem::size_of::<drflac__memory_stream>() - 12usize];
    ["Alignment of drflac__memory_stream"]
        [::core::mem::align_of::<drflac__memory_stream>() - 4usize];
    ["Offset of field: drflac__memory_stream::data"]
        [::core::mem::offset_of!(drflac__memory_stream, data) - 0usize];
    ["Offset of field: drflac__memory_stream::dataSize"]
        [::core::mem::offset_of!(drflac__memory_stream, dataSize) - 4usize];
    ["Offset of field: drflac__memory_stream::currentReadPos"]
        [::core::mem::offset_of!(drflac__memory_stream, currentReadPos) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct drflac_bs {
    pub onRead: drflac_read_proc,
    pub onSeek: drflac_seek_proc,
    pub onTell: drflac_tell_proc,
    pub pUserData: *mut cty::c_void,
    pub unalignedByteCount: usize,
    pub unalignedCache: drflac_cache_t,
    pub nextL2Line: drflac_uint32,
    pub consumedBits: drflac_uint32,
    pub cacheL2: [drflac_cache_t; 1024usize],
    pub cache: drflac_cache_t,
    pub crc16: drflac_uint16,
    pub crc16Cache: drflac_cache_t,
    pub crc16CacheIgnoredBytes: drflac_uint32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of drflac_bs"][::core::mem::size_of::<drflac_bs>() - 4144usize];
    ["Alignment of drflac_bs"][::core::mem::align_of::<drflac_bs>() - 4usize];
    ["Offset of field: drflac_bs::onRead"][::core::mem::offset_of!(drflac_bs, onRead) - 0usize];
    ["Offset of field: drflac_bs::onSeek"][::core::mem::offset_of!(drflac_bs, onSeek) - 4usize];
    ["Offset of field: drflac_bs::onTell"][::core::mem::offset_of!(drflac_bs, onTell) - 8usize];
    ["Offset of field: drflac_bs::pUserData"]
        [::core::mem::offset_of!(drflac_bs, pUserData) - 12usize];
    ["Offset of field: drflac_bs::unalignedByteCount"]
        [::core::mem::offset_of!(drflac_bs, unalignedByteCount) - 16usize];
    ["Offset of field: drflac_bs::unalignedCache"]
        [::core::mem::offset_of!(drflac_bs, unalignedCache) - 20usize];
    ["Offset of field: drflac_bs::nextL2Line"]
        [::core::mem::offset_of!(drflac_bs, nextL2Line) - 24usize];
    ["Offset of field: drflac_bs::consumedBits"]
        [::core::mem::offset_of!(drflac_bs, consumedBits) - 28usize];
    ["Offset of field: drflac_bs::cacheL2"][::core::mem::offset_of!(drflac_bs, cacheL2) - 32usize];
    ["Offset of field: drflac_bs::cache"][::core::mem::offset_of!(drflac_bs, cache) - 4128usize];
    ["Offset of field: drflac_bs::crc16"][::core::mem::offset_of!(drflac_bs, crc16) - 4132usize];
    ["Offset of field: drflac_bs::crc16Cache"]
        [::core::mem::offset_of!(drflac_bs, crc16Cache) - 4136usize];
    ["Offset of field: drflac_bs::crc16CacheIgnoredBytes"]
        [::core::mem::offset_of!(drflac_bs, crc16CacheIgnoredBytes) - 4140usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct drflac_subframe {
    pub subframeType: drflac_uint8,
    pub wastedBitsPerSample: drflac_uint8,
    pub lpcOrder: drflac_uint8,
    pub pSamplesS32: *mut drflac_int32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of drflac_subframe"][::core::mem::size_of::<drflac_subframe>() - 8usize];
    ["Alignment of drflac_subframe"][::core::mem::align_of::<drflac_subframe>() - 4usize];
    ["Offset of field: drflac_subframe::subframeType"]
        [::core::mem::offset_of!(drflac_subframe, subframeType) - 0usize];
    ["Offset of field: drflac_subframe::wastedBitsPerSample"]
        [::core::mem::offset_of!(drflac_subframe, wastedBitsPerSample) - 1usize];
    ["Offset of field: drflac_subframe::lpcOrder"]
        [::core::mem::offset_of!(drflac_subframe, lpcOrder) - 2usize];
    ["Offset of field: drflac_subframe::pSamplesS32"]
        [::core::mem::offset_of!(drflac_subframe, pSamplesS32) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct drflac_frame_header {
    pub pcmFrameNumber: drflac_uint64,
    pub flacFrameNumber: drflac_uint32,
    pub sampleRate: drflac_uint32,
    pub blockSizeInPCMFrames: drflac_uint16,
    pub channelAssignment: drflac_uint8,
    pub bitsPerSample: drflac_uint8,
    pub crc8: drflac_uint8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of drflac_frame_header"][::core::mem::size_of::<drflac_frame_header>() - 24usize];
    ["Alignment of drflac_frame_header"][::core::mem::align_of::<drflac_frame_header>() - 8usize];
    ["Offset of field: drflac_frame_header::pcmFrameNumber"]
        [::core::mem::offset_of!(drflac_frame_header, pcmFrameNumber) - 0usize];
    ["Offset of field: drflac_frame_header::flacFrameNumber"]
        [::core::mem::offset_of!(drflac_frame_header, flacFrameNumber) - 8usize];
    ["Offset of field: drflac_frame_header::sampleRate"]
        [::core::mem::offset_of!(drflac_frame_header, sampleRate) - 12usize];
    ["Offset of field: drflac_frame_header::blockSizeInPCMFrames"]
        [::core::mem::offset_of!(drflac_frame_header, blockSizeInPCMFrames) - 16usize];
    ["Offset of field: drflac_frame_header::channelAssignment"]
        [::core::mem::offset_of!(drflac_frame_header, channelAssignment) - 18usize];
    ["Offset of field: drflac_frame_header::bitsPerSample"]
        [::core::mem::offset_of!(drflac_frame_header, bitsPerSample) - 19usize];
    ["Offset of field: drflac_frame_header::crc8"]
        [::core::mem::offset_of!(drflac_frame_header, crc8) - 20usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct drflac_frame {
    pub header: drflac_frame_header,
    pub pcmFramesRemaining: drflac_uint32,
    pub subframes: [drflac_subframe; 8usize],
}
